# configjy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup_unused.cfg  tox.ini
.github/workflows/: build.yaml  publish.yaml
src/configjy/: ConfigFile.py  __init__.py
tests/: fixtures.py  test_config.py
