[tool.poetry]
name = "configjy"
version = "0.1.0.3"
description = "Loads a json or yaml config file"
authors = ["henrique lino <henrique.lino97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
"ruamel.yaml" = "^0.17.21"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
